Iteration 2: Recipe Page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>Odin Recipes</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="title">Odin Recipes</h1>
+    <div class="recipes">
+      <ul class="recipes__list list">
+        <li class="list__element">
+          <a href="/recipes/borsch.html" class="list__link">Borsch</a>
+        </li>
+        <li class="list__element">
+          <a href="/recipes/varenyky.html" class="list__link">Varenyky</a>
+        </li>
+        <li class="list__element">
+          <a href="/recipes/chicken-kiev.html" class="list__link"
+            >Chicken Kiev</a
+          >
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
