--- a/index.html
+++ b/index.html
@@ -8,21 +8,29 @@
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1 class="title">Odin Recipes</h1>
-    <div class="recipes">
-      <ul class="recipes__list list">
-        <li class="list__element">
-          <a href="/recipes/borsch.html" class="list__link">Borsch</a>
-        </li>
-        <li class="list__element">
-          <a href="/recipes/varenyky.html" class="list__link">Varenyky</a>
-        </li>
-        <li class="list__element">
-          <a href="/recipes/chicken-kiev.html" class="list__link"
-            >Chicken Kiev</a
-          >
-        </li>
-      </ul>
-    </div>
+    <header class="header">
+      <div class="header__container container">
+        <h1 class="header__element title">Odin Recipes</h1>
+      </div>
+    </header>
+    <main class="main">
+      <div class="main__container container">
+        <ul class="main__list list">
+          <li class="list__element">
+            <a href="/recipes/borsch.html" class="list__link link">Borsch</a>
+          </li>
+          <li class="list__element">
+            <a href="/recipes/varenyky.html" class="list__link link"
+              >Varenyky</a
+            >
+          </li>
+          <li class="list__element">
+            <a href="/recipes/chicken-kiev.html" class="list__link link"
+              >Chicken Kiev</a
+            >
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
