--- a/recipes/varenyky.html
+++ b/recipes/varenyky.html
@@ -8,7 +8,71 @@
     <title>Odin Recipes | Varenyky</title>
   </head>
   <body>
-    <h1 class="title">Varenyky</h1>
-    <a href="/index.html" class="link">Return to main page</a>
+    <header class="header">
+      <div class="container">
+        <h1 class="header__element title">Varenyky</h1>
+      </div>
+    </header>
+    <div class="main">
+      <div class="main__container container">
+        <figure class="picture">
+          <img
+            src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7966773.jpg"
+            alt="Photo of the dish"
+            class="picture__element"
+          />
+          <figcaption class="picture__description">
+            Ukrainian Olha's Varenyky (perogies) These half moons of dough may be filled with a variety of fruits, vegetables, meats and cheeses, although for Christmas Eve potato and cabbage fillings are the favorite.
+          </figcaption>
+          </figure>
+          <section class="ingridients">
+            <h2 class="ingridients__title">Ingridients</h2>
+            <ul class="ingridients__list list">
+              <li class="ingridients__element">5 cups all-purpose flour</li>
+              <li class="ingridients__element">1 teaspoon salt</li>
+              <li class="ingridients__element">2 tablespoons butter, softened</li>
+              <li class="ingridients__element">
+                1 cup evaporated milk
+              </li>
+              <li class="ingridients__element">½ cup water</li>
+            </ul>
+            </section>
+          <section class="ingridients">
+            <h2 class="ingridients__title">Filling</h2>
+            <ul class="ingridients__list list">
+              <li class="ingridients__element">6 medium potatoes, cut into small cubes</li>
+              <li class="ingridients__element">2 large onions, finely chopped</li>
+              <li class="ingridients__element">2½ cup butter</li>
+              <li class="ingridients__element">
+                1 cup shredded Cheddar cheese
+              </li>
+              <li class="ingridients__element">salt and pepper to taste</li>
+            </ul>
+            </section>
+          <section class="steps">
+            <h2 class="steps__title">Steps</h2>
+            <ol class="steps__list list">
+              <li class="steps__element">
+                To make the dough, combine the flour and salt in a large bowl. Make a well in the center and add the soft butter and evaporated milk; stir gently until all the liquid is absorbed. Add water only as needed, kneading continuously until dough sticks together. Place dough into a greased bowl, turn to coat, and let rest for 30 minutes.
+              </li>
+              <li class="steps__element">
+                To make the potato filling, place potatoes into a saucepan with water to cover. Bring to a boil and cook until tender, about 10 minutes. Drain and set aside. Melt 1/2 cup butter in a medium skillet, over medium heat. Saute onions in butter until tender. Mix the onions into the potatoes along with the cheese and season with salt and pepper to taste.
+              </li>
+              <li class="steps__element">
+                To make the sauerkraut and cabbage filling, pour the drained sauerkraut into a large saucepan. In a medium skillet, saute 2 onions in 1/2 cup butter until tender, about 5 minutes. Stir the onions into the sauerkraut along with the cabbage and chicken bouillon cube. Cook over low heat until liquid evaporates. Season with pepper and remove from heat. Allow the mixture to cool, then run through a grinder or food processor.
+              </li>
+              <li class="steps__element">
+                Remove the dough from the bowl onto a lightly floured surface. Roll out to 1/8 inch in thickness. Cut into 3 inch circles. Place one tablespoon of filling onto one side of the circle. Fold the other half over and press the edges to seal. Place finished dumplings onto a floured tray and keep covered.
+              </li>
+              <li class="steps__element">
+                Bring a large pot of water to a boil. Drop 10 or so dumplings into the water at a time. Cook for 3 to 5 minutes, then remove to a colander to drain. Place finished dumplings onto a lightly oiled dish and turn them to coat with a thin layer. This will keep them from sticking together. Serve dumplings with fried onions and sour cream. Cooled dumplings also can be fried in oil and butter for a nice crispy surface.
+              </li>
+            </ol>
+          </section>
+        </figure>
+        <a href="/index.html" class="link">Return to main page</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
