--- a/recipes/borsch.html
+++ b/recipes/borsch.html
@@ -8,7 +8,91 @@
     <title>Odin Recipes | Borsch</title>
   </head>
   <body>
-    <h1 class="title">Borsch</h1>
-    <a href="/index.html" class="link">Return to main page</a>
+    <header class="header">
+      <div class="container">
+        <h1 class="header__element title">Borsch</h1>
+      </div>
+    </header>
+    <div class="main">
+      <div class="main__container container">
+        <figure class="picture">
+          <img
+            src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7681929.jpg"
+            alt="Photo of the dish"
+            class="picture__element"
+          />
+          <figcaption class="picture__description">
+            This is the best borscht I have ever eaten. Double the recipe,
+            because it freezes well.
+          </figcaption>
+          </figure>
+          <section class="ingridients">
+            <h2 class="ingridients__title">Ingridients</h2>
+            <ul class="ingridients__list list">
+              <li class="ingridients__element">6 cups water</li>
+              <li class="ingridients__element">¾ tablespoon salt</li>
+              <li class="ingridients__element">½ cup finely chopped carrots</li>
+              <li class="ingridients__element">
+                ¼ cup chopped green bell pepper, divided
+              </li>
+              <li class="ingridients__element">½ stalk celery, chopped</li>
+              <li class="ingridients__element">1 medium beet</li>
+              <li class="ingridients__element">
+                ½ cup canned peeled and diced tomatoes
+              </li>
+              <li class="ingridients__element">3 potatoes, quartered</li>
+              <li class="ingridients__element">⅓ cup butter</li>
+              <li class="ingridients__element">½ cup chopped onion</li>
+              <li class="ingridients__element">1 ½ cups canned tomatoes</li>
+              <li class="ingridients__element">
+                3 cups finely shredded cabbage, divided
+              </li>
+              <li class="ingridients__element">¼ cup heavy cream</li>
+              <li class="ingridients__element">¾ cup diced potatoes</li>
+              <li class="ingridients__element">1 tablespoon dried dill weed</li>
+              <li class="ingridients__element">
+                ¼ teaspoon ground black pepper to taste
+              </li>
+              <li class="ingridients__element">
+                salt and freshly ground black pepper to taste
+              </li>
+            </ul>
+          <section class="steps">
+            <h2 class="steps__title">Steps</h2>
+            <ol class="steps__list list">
+              <li class="steps__element">
+                Place water, salt, carrots, 1/2 of the bell pepper, celery,
+                beet, tomatoes, and quartered potatoes in a large stock pot over
+                high heat. Bring to a boil.
+              </li>
+              <li class="steps__element">
+                Melt 1/3 cup butter in a separate skillet over medium heat.
+                Saute onions in butter until tender, approximately 5 minutes.
+                Stir in tomatoes, reduce heat to medium low, and simmer for 15
+                minutes. Remove 1/2 cup of sauce from skillet, and set aside.
+                Stir half of the cabbage into the skillet with remaining sauce,
+                and continue simmering 5 minutes more, or until tender.
+              </li>
+              <li class="steps__element">
+                Remove beet from boiling liquid and discard. Remove potatoes
+                with a slotted spoon or tongs, and place in a bowl with
+                remaining 1 tablespoon of butter and the cream. Mash together
+                until smooth.
+              </li>
+              <li class="steps__element">
+                Return the 1/2 cup of reserved onion-tomato sauce to the stock
+                pot. Stir in diced potatoes, and simmer until just tender but
+                still firm, approximately 5 minutes. Increase heat to a low
+                boil, and stir in remaining cabbage, tomato sauce, and mashed
+                potatoes. Reduce heat and simmer a few minutes more. Stir in
+                remaining bell pepper, season with black pepper, and serve.
+              </li>
+            </ol>
+          </section>
+        </figure>
+        <a href="/index.html" class="link">Return to main page</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
