--- a/recipes/chicken-kiev.html
+++ b/recipes/chicken-kiev.html
@@ -8,7 +8,84 @@
     <title>Odin Recipes | Chicken Kiev</title>
   </head>
   <body>
-    <h1 class="title">Chicken Kiev</h1>
-    <a href="/index.html" class="link">Return to main page</a>
+    <header class="header">
+      <div class="container">
+        <h1 class="header__element title">Chicken Kiev</h1>
+      </div>
+    </header>
+    <div class="main">
+      <div class="main__container container">
+        <figure class="picture">
+          <img
+            src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5675545.jpg"
+            alt="Photo of the dish"
+            class="picture__element"
+          />
+          <figcaption class="picture__description">
+            This fantastic Russian Chicken Kiev recipe has been my family favorite for the past 30 years. It is reasonably easy to prepare and is worth the time.
+          </figcaption>
+          </figure>
+          <section class="ingridients">
+            <h2 class="ingridients__title">Ingridients</h2>
+            <ul class="ingridients__list list">
+              <li class="ingridients__element">⅓ cup butter</li>
+              <li class="ingridients__element">½ teaspoon ground black pepper</li>
+              <li class="ingridients__element">1 teaspoon garlic powder</li>
+              <li class="ingridients__element">
+                2 pounds skinless, boneless chicken breast halves
+              </li>
+              <li class="ingridients__element">2 eggs</li>
+              <li class="ingridients__element">3 tablespoons water</li>
+              <li class="ingridients__element">¼ teaspoon ground black pepper</li>
+              <li class="ingridients__element">
+                ½ teaspoon garlic powder
+              </li>
+              <li class="ingridients__element">
+                1 teaspoon dried dill weed
+              </li>
+              <li class="ingridients__element">
+                ¾ cup all-purpose flour
+              </li>
+              <li class="ingridients__element">
+                ¾ cup dry bread crumbs
+              </li>
+              <li class="ingridients__element">
+                2 cups vegetable oil for frying
+              </li>
+              <li class="ingridients__element">
+                ½ lemon, sliced
+              </li>
+              <li class="ingridients__element">
+                ¼ cup chopped fresh parsley
+              </li>
+            </ul>
+            </section>
+          <section class="steps">
+            <h2 class="steps__title">Steps</h2>
+            <ol class="steps__list list">
+              <li class="steps__element">
+                Combine 1/3 cup butter, 1/2 teaspoon pepper and 1 teaspoon garlic powder. On a 6x6 inch piece of aluminum foil, spread mixture to about 2x3 inches. Place this mixture in the coldest section of your freezer and freeze until firm. This can be done ahead of time.
+              </li>
+              <li class="steps__element">
+                Remove all fat from the chicken breast. If using whole chicken breasts, cut them in half. Place each chicken breast half between 2 pieces of waxed paper and using a mallet, pound carefully to about 1/4 inch thickness or less.
+
+
+              </li>
+              <li class="steps__element">
+                When butter mixture is firm, remove from freezer and cut into 6 equal pieces. Place one piece of butter on each chicken breast. Fold in edges of chicken and then roll to encase the butter completely. Secure the chicken roll with small skewers or toothpicks.
+              </li>
+              <li class="steps__element">
+                In a mixing bowl, beat eggs with water until fluffy. In a separate bowl, mix together 1/4 teaspoon black pepper, 1/2 teaspoon garlic powder, dill weed and flour. Coat the chicken well with the seasoned flour. Dip the floured chicken in the egg mixture and then roll in the bread crumbs. Place coated chicken on a shallow tray and chill in refrigerator for 30 minutes.
+              </li>
+              <li class="steps__element">
+                In a medium size deep frying pan, heat vegetable oil to medium-high. Fry chicken for about 5 minutes then turn over and fry for 5 minutes longer or until the chicken is golden brown. To test for doneness, cut into one of the rolled chicken breasts to make sure it doesn't have a pink interior. Serve immediately, garnished with a sliced lemon twist and a sprinkling or parsley.
+              </li>
+            </ol>
+          </section>
+        </figure>
+        <a href="/index.html" class="link">Return to main page</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
