--- a/recipes/borsch.html
+++ b/recipes/borsch.html
@@ -90,7 +90,7 @@
             </ol>
           </section>
         </figure>
-        <a href="/index.html" class="link">Return to main page</a>
+        <a href="/odin-recipes" class="link">Return to main page</a>
         </div>
       </div>
     </div>
