--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
       <div class="main__container container">
         <ul class="main__list list">
           <li class="list__element">
-            <a href="/recipes/borsch.html" class="list__link link">Borsch</a>
+            <a href="oding-recipes/recipes/borsch.html" class="list__link link"
+              >Borsch</a
+            >
           </li>
           <li class="list__element">
-            <a href="/recipes/varenyky.html" class="list__link link"
+            <a
+              href="oding-recipes/recipes/varenyky.html"
+              class="list__link link"
               >Varenyky</a
             >
           </li>
           <li class="list__element">
-            <a href="/recipes/chicken-kiev.html" class="list__link link"
+            <a
+              href="oding-recipes/recipes/chicken-kiev.html"
+              class="list__link link"
               >Chicken Kiev</a
             >
           </li>
