--- a/recipes/chicken-kiev.html
+++ b/recipes/chicken-kiev.html
@@ -83,7 +83,7 @@
             </ol>
           </section>
         </figure>
-        <a href="/index.html" class="link">Return to main page</a>
+        <a href="/odin-recipes" class="link">Return to main page</a>
         </div>
       </div>
     </div>
